Updated website branding/color scheme, cleaned up code, and added project info to README file

--- a/index.html
+++ b/index.html
@@ -13,60 +13,60 @@
 <body>
 
     <header>
-        <p id="logo">Header Logo</p>
+        <p id="logo">Jerry's Shoes</p>
         <ul>
-            <li><a href="" target="_blank">header link one</a></li>
-            <li><a href="" target="_blank">header link two</a></li>
-            <li><a href="" target="_blank">header link three</a></li>
+            <li><a href="" target="_blank">Shop</a></li>
+            <li><a href="" target="_blank">Footwear Tips</a></li>
+            <li><a href="" target="_blank">About Us</a></li>
         </ul>
     </header>
 
     <div id="hero-container">
         <div id="hero-left">
-            <h1>This website is about shoes.</h1>
-            <p class="sub">This website has some subtext that goes herte under the main title. It's a smaller font and the color is lower contrast.</p>
+            <h1>Your go-to shoe resource.</h1>
+            <p class="sub">At Jerry's Shoes, we have a huge storefront of all types of footwear and a wealth of information you can refer to.</p>
             <button type="button" id="top-button">Sign up</button>
         </div>
         <div id="hero-right">    
-            <img src="images/shoe-throw.jpeg" alt="Man throwing a shoe in the air" width="400" height="auto">
+            <img src="images/shoe-throw.jpeg" alt="Man throwing a shoe in the air" id="heroimg">
         </div>
     </div>
 
     <div id="information">
-        <h2>Some random information.</h2>
+        <h2>Shoe Types</h2>
             <div id="cards">
                 <div class="card">
-                    <img src="images/dress-shoe.png" alt="Dress shoe" width="150" height="auto" class="cardimg">
-                    <p class="card-text">We have lots of dress shoes available.</p>
+                    <img src="images/dress-shoe.png" alt="Dress shoe" class="cardimg">
+                    <p class="card-text">Attending a fancy event? We carry dress shoes.</p>
                 </div>
                 <div class="card">
-                    <img src="images/casual-shoes.png" alt="Casual shoe" width="150" height="auto" class="cardimg">
-                    <p class="card-text">We have lots of casual shoes available.</p>
+                    <img src="images/casual-shoes.png" alt="Casual shoe" class="cardimg">
+                    <p class="card-text">We sell comfortable, stylish casual shoes.</p>
                 </div>    
                 <div class="card">
-                    <img src="images/running-shoes.png" alt="Running shoe" width="150" height="auto" class="cardimg">
-                    <p class="card-text">We have lots of running shoes available.</p>
+                    <img src="images/running-shoes.png" alt="Running shoe" class="cardimg">
+                    <p class="card-text">Athletic shoes for any sport are available here.</p>
                 </div>    
                 <div class="card">
-                    <img src="images/boots.png" alt="Boot" width="150" height="auto" class="cardimg">
-                    <p class="card-text">We have lots of boots available.</p>
+                    <img src="images/boots.png" alt="Boot" class="cardimg">
+                    <p class="card-text">We carry a wide variety of boots.</p>
                 </div>     
             </div>
     </div>
 
     <div id="quote">
         <p id="quote-text">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            Jerry's Shoes is amazing! They had just the pair I was looking for and I was blown away by the price! The customer service and shipping are top-notch as well! Highly recommended.
         </p>
-        <p id="author">-A loyal customer</p>    
+        <p id="author">-Carol from Missouri</p>    
     </div>
 
     <div id="action-window">
 
         <div id="action-box">
             <div id="action-left">
-                <p id="action-hero">Call to action! It's time</p>
-                <p id="action-sub">Sign up for our product by clicking that button right over there!</p>
+                <p id="action-hero">Join the Jerry's Shoes newsletter</p>
+                <p id="action-sub">Sign up for exclusive coupons and news by clicking that button right over there!</p>
             </div>
             <div id="action-right">
                 <button type="button" id="action-button">Sign up</button>
@@ -75,7 +75,7 @@
     </div>
 
     <div id="footer">
-    <p class="sub">Copyright Ⓒ Phillip Ott 2021</p>
+    <p class="sub">Copyright Ⓒ Phillip Ott 2021. Shoe icons created by Smashicons on Flaticon.</p>
     </div>
 
 </body>
